[package]
name = "turbo_bernd"
version = "0.1.0"
authors = ["Nikolai Guyot <nikolai.guyot@code.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.5.2"
log = "0.4.8"
pretty_env_logger = "0.4"
crossbeam = "0.7"

[dev-dependencies]
drill = "0.5.0"
